--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@ oh，店长在看到你的这一刻就发出了感叹，
 [[逛逛]]
 </tw-passagedata><tw-passagedata pid="99" name="章节目录" tags="" position="1475,100" size="100,100">第一章（支线一）：[[让我们踏入音乐猫街吧~]]
 第二章（支线二）：[[排练、乐手、气泡酒，别醉了哦~]]
+第三章（主线一、支线三）：[[第一次排练！；放松-复盘！]]
 
 </tw-passagedata><tw-passagedata pid="100" name="排练室" tags="" position="1875,700" size="100,100">排练的时间总是这么的短暂又漫长...
 等等！
@@ -1171,7 +1172,7 @@ yes！
 -----------------------中场休息-----------------------------
 19:30-20:00    Ice Room冷库                       30min
 20:05-20:35    熔断协奏曲                           30min
-20:40-21:10    春夏清                                   30min
+20:40-21:10    春夏清                                   30min    Rhythm Nation
 21:15-21:45    万能少女旅店                        30min
 --------------------------------------------------------------------
 ***注意：*** 严格守时！超时意味着后续乐队彩排被压缩或取消！请优先保证基础演出，午餐晚餐由工作人员统一提供。
@@ -1327,7 +1328,7 @@ o no ，大失败啊...
 ]
 ]
 
-</tw-passagedata><tw-passagedata pid="158" name="回房间" tags="" position="3875,550" size="100,100">(if: $identity is &quot;human&quot;)[
+</tw-passagedata><tw-passagedata pid="158" name="回房间" tags="" position="3900,475" size="100,100">(if: $identity is &quot;human&quot;)[
 站在门口等待了一会，门开了。
 你走进来第一件事就是凑到小猫队友面前狠狠挼了他一把，然后被殴打。
 打着打着，忽然注意到了食盆内的小图标。
@@ -1338,6 +1339,16 @@ o no ，大失败啊...
 啪啪啪！打的啪啪响！
 诶，他脑袋一偏，凑到了你的食盆面前看。
 ]
+“这是什么？之前酒店的投喂食盆有这几个图案吗？”
+忽然想到什么，掏出手机把那个四不像童遥翻出来对照着看：
+
+鸽子头上插羽毛，咕咕咕咕咕咕。
+小象小象吓跳脚，踹翻整盒小薯条。
+哗啦啦哗啦啦，书本只剩一页啦。
+
+这跟食盆里的小图标完全能对上啊，羽毛、小象、薯条、书页，还有个磁带机？
+大家不约而同的想到了——这
+不会是猫猫神给我们变回人类的方法暗示吧！
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
